# ZOOMer

./: CMakeLists.txt  README.md  exit_codes.txt  help_dialog.txt
system/gui_osx/: moc_meetinginfowidget.cpp  moc_zoomer.cpp  ui_meetinginfowidget.h
system/gui_osx/ZOOMer/: ZOOMer.pro  button_quit.qss  button_running.qss  lib.cpp  list_closed.qss  list_running.qss  main.cpp  maxmeeting.ui  meetinginfowidget.cpp  meetinginfowidget.h  meetinginfowidget.ui  slidingstackedwidget.h  zoomer.cpp  zoomer.h  zoomer.ui
system/gui_osx/ZOOMer.app/Contents/: Info.plist
system/gui_osx/ZOOMer.app/Contents/MacOS/: ZOOMer
system/gui_osx/build-ZOOMer-Desktop_Qt_5_15_2_clang_64bit-Profile/: Makefile  moc_meetinginfowidget.cpp  ui_maxmeeting.h  ui_zoomer.h
system/gui_win10/: gui_win10.pro  main.cpp  zoomerwin.cpp  zoomerwin.h  zoomerwin.ui
system/icons/: argon_full_ascii.txt  zoomer_icon_ascii.txt  zoomer_icon_ascii_small.txt
system/includes/: cli.h  dependencies.h  errors.h  mem-get.h  process-ops.h  runtime-functionality.h  token.h
system/lib/: background-runtime.c  command-line-interface.c
system/lib/utilities/: cli-lib.c  mem-get.c  runtime-functionality.c  time-date.c
system/lib/utilities/process-ops/: process-ops.c
system/src/: cli_init.c
